Use intptr_t for all handle integer conversions

Change all intptr() overloads to return std::intptr_t (signed) instead
of std::uintptr_t per C standard convention for pointer-to-integer
conversion. This addresses issue #1342 which requires Buffer.handle
to return a signed integer.

Fixes #1342